# debttracker

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: data.rs  main.rs  money.rs
static/: style.css
templates/: base.html.tera  form.html.tera  index.html.tera  list.html.tera  login.html.tera  main.html.tera
