[package]
name = "debttracker"
version = "0.1.0"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]
edition = "2018"

[dependencies]
sled = "0.24.1"
rocket = "0.4.1"
bincode = "1.1.4"
serde = { version = "*", features=["derive"] }

[dependencies.rocket_contrib]
version = "*"
default_features = false
features = ["tera_templates"]
