[package]
name = "debttracker"
version = "0.1.0"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
bincode = "1.1.4"
serde = { version = "*", features=["derive"] }
bcrypt = "0.4"
failure = "0.1.6"
rusqlite = "0.21.0"

[dependencies.rocket_contrib]
version = "*"
default_features = false
features = ["tera_templates"]
